# HPC-Agentic-SDK

./: .gitignore  AGENTS.md  IRI_CHECKLIST.md  PORTING.md  README.md
.agents/plugins/: marketplace.json
.claude-plugin/: marketplace.json
plugins/bigdft-dev/.claude-plugin/: plugin.json
plugins/bigdft-dev/.codex-plugin/: plugin.json
plugins/bigdft-dev/skills/bigdft-dev-atlab/: SKILL.md
plugins/bigdft-dev/skills/bigdft-dev-futile/: SKILL.md
plugins/bigdft-dev/skills/bigdft-dev-liborbs/: SKILL.md
plugins/bigdft-dev/skills/bigdft-dev-projectors/: SKILL.md
plugins/bigdft-dev/skills/bigdft-dev-psolver/: SKILL.md
plugins/bigdft-dev/skills/bigdft-dev-variables/: SKILL.md
plugins/bigdft/.claude-plugin/: plugin.json
plugins/bigdft/.codex-plugin/: plugin.json
plugins/bigdft/skills/bigdft-input/: SKILL.md
plugins/bigdft/skills/bigdft-install/: SKILL.md
plugins/bigdft/skills/bigdft-linear-scaling/: SKILL.md
plugins/bigdft/skills/bigdft-logfile/: SKILL.md
plugins/bigdft/skills/bigdft-pseudopotentials/: SKILL.md
plugins/bigdft/skills/bigdft-systems/: SKILL.md
plugins/irene/: .mcp.json
plugins/irene/.claude-plugin/: plugin.json
plugins/irene/.codex-plugin/: plugin.json
plugins/irene/skills/irene-configuring/: SKILL.md
plugins/irene/skills/irene-demo/: SKILL.md
plugins/irene/skills/irene-monitoring-jobs/: SKILL.md
plugins/irene/skills/irene-reference/: SKILL.md
plugins/irene/skills/irene-submitting-jobs/: SKILL.md
plugins/remotemanager/.codex-plugin/: plugin.json
plugins/remotemanager/skills/remotemanager-computer-promotion/: SKILL.md
plugins/remotemanager/skills/remotemanager-configuring/: SKILL.md
plugins/remotemanager/skills/remotemanager-dataset-promotion/: SKILL.md
plugins/remotemanager/skills/remotemanager-machine-database/: SKILL.md
server/: pyproject.toml  run.sh
server/irene_mcp/: compute.py  config.py  docs_server.py  doctor.py  hpc_server.py  ingest.py  middleware.py  models.py
server/irene_mcp/compute/: __init__.py  base.py  bridge.py
server/irene_mcp/data/: irene_config.json  irene_guide.md
server/irene_mcp/data/docs_index/: chunks.json
server/irene_mcp/rag/: embed.py  ingest.py  store.py
server/tests/: smoke.py
